java-c plugin impl